--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 	  <div class="row">
 		<div class="col-md-4 col-xs-6">
 		  <div class="thumbnail">
-			<img src="/images/fb.png" alt="FB" style="width:100%">
+			<img src="VotacionesEthereum/src/images/fb.png" alt="FB" style="width:100%">
 			<div class="caption">
 			  <p>Fulgencio Batista</p>
 			</div>
@@ -75,7 +75,7 @@
 		</div>
 		<div class="col-md-4 col-xs-6">
 		  <div class="thumbnail">
-			<img src="/images/as.jpg" alt="AS" style="width:100%">
+			<img src="VotacionesEthereum/src/images/as.jpg" alt="AS" style="width:100%">
 			<div class="caption">
 			  <p>Alfredo Strossner</p>
 			</div>
@@ -83,7 +83,7 @@
 		</div>
 		<div class="col-md-4 col-xs-6">
 		  <div class="thumbnail">
-			<img src="/images/ap.jpg" alt="AP" style="width:100%">
+			<img src="VotacionesEthereum/src/images/ap.jpg" alt="AP" style="width:100%">
 			<div class="caption">
 			  <p>Augusto Pinochet</p>
 			</div>
@@ -91,7 +91,7 @@
 		</div>
 		<div class="col-md-4 col-xs-6">
 		  <div class="thumbnail">
-			<img src="/images/grp.jpg" alt="GRP" style="width:100%">
+			<img src="VotacionesEthereum/src/images/grp.jpg" alt="GRP" style="width:100%">
 			<div class="caption">
 			  <p>Gustavo Rojas Pinilla</p>
 			</div>
@@ -99,7 +99,7 @@
 		</div>
 		<div class="col-md-4 col-xs-6">
 		  <div class="thumbnail">
-			<img src="/images/jrv.jpg" alt="JRV" style="width:100%">
+			<img src="VotacionesEthereum/src/images/jrv.jpg" alt="JRV" style="width:100%">
 			<div class="caption">
 			  <p>Jorge Rafael Videla</p>
 			</div>
@@ -107,7 +107,7 @@
 		</div>
 		<div class="col-md-4 col-xs-6">
 		  <div class="thumbnail">
-			<img src="/images/man.jpg" alt="MAN" style="width:100%">
+			<img src="VotacionesEthereum/src/images/man.jpg" alt="MAN" style="width:100%">
 			<div class="caption">
 			  <p>Manuel Antonio Noriega</p>
 			</div>
@@ -122,7 +122,7 @@
             <select class="form-control" id="candidatesSelect">
             </select>
           </div>
-          <img src="/images/ayuda.png" alt="AYUDA" class="centroIma">
+          <img src="VotacionesEthereum/src/images/ayuda.png" alt="AYUDA" class="centroIma">
           <br/>
           <button type="submit" class="btn btn-primary btn-block">VOTAR</button>
           <br/>
