--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 	  <div class="row">
 		<div class="col-md-4 col-xs-6">
 		  <div class="thumbnail">
-			<img src="/images/fb.png" alt="FB" style="width:100%">
+			<img src="src/images/fb.png" alt="FB" style="width:100%">
 			<div class="caption">
 			  <p>Fulgencio Batista</p>
 			</div>
