--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
             <select class="form-control" id="candidatesSelect">
             </select>
           </div>
-          <img src="VotacionesEthereum/src/images/ayuda.png" alt="AYUDA" class="centroIma">
+          <img src="images/ayuda.png" alt="AYUDA" class="centroIma">
           <br/>
           <button type="submit" class="btn btn-primary btn-block">VOTAR</button>
           <br/>
